Fix copyright color contrast to meet WCAG AA standards

--- a/web/themes/a11ytalks/css/base/variables.css
+++ b/web/themes/a11ytalks/css/base/variables.css
@@ -46,7 +46,7 @@
   --color-black: #000;
   --color-black-light: #222;
   --color-gray: #6e6e6e;
-  --color-gray-light: #787878;
+  --color-gray-light: #757575;
   --color-gray-lighter: #c8c8c8;
   --color-primary: #2ec4b6;
   --color-secondary: #E90909;
